[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/characters/Triceratops/Attack_001.png" type="Texture" id=1]
[ext_resource path="res://assets/characters/Pterodactyl/Fly_001.png" type="Texture" id=2]
[ext_resource path="res://assets/characters/Triceratops/Attack_003.png" type="Texture" id=3]
[ext_resource path="res://assets/characters/Pterodactyl/Fly_000.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/Pterodactyl/Fly_002.png" type="Texture" id=5]
[ext_resource path="res://assets/characters/Triceratops/Attack_004.png" type="Texture" id=6]
[ext_resource path="res://assets/characters/Triceratops/Attack_002.png" type="Texture" id=7]
[ext_resource path="res://assets/characters/Pterodactyl/Fly_003.png" type="Texture" id=8]
[ext_resource path="res://scripts/GrupoDinossauros.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 8 ) ],
"loop": true,
"name": "Pterodactil",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "triceratops",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 4.25 )

[node name="GrupoDinossauros" type="Area2D"]
script = ExtResource( 9 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Pterodactil" type="AnimatedSprite" parent="."]
position = Vector2( -1, -33 )
scale = Vector2( 0.14, 0.14 )
frames = SubResource( 1 )
animation = "Pterodactil"

[node name="Triceratops" type="AnimatedSprite" parent="."]
scale = Vector2( 0.05, 0.05 )
frames = SubResource( 2 )
animation = "triceratops"

[node name="ColisaoPterodactil" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -34 )
polygon = PoolVector2Array( -19, -6, -12, -8, -5, -15, 2, -22, 16, -25, 16, -14, 8, -5, 11, 3, 5, 7, -3, 3, -34, 1 )

[node name="ColisaoTriceratops" type="CollisionShape2D" parent="."]
position = Vector2( -1, 1.25 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_GrupoDinossauros_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
